--- a/springboot-mvc-rest-demo/.classpath
+++ b/springboot-mvc-rest-demo/.classpath
@@ -153,4 +153,17 @@
   <classpathentry kind="var" path="M2_REPO/net/java/dev/jna/jna/4.5.1/jna-4.5.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/projectlombok/lombok/1.16.20/lombok-1.16.20.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.8.2/gson-2.8.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-swagger2/2.9.2/springfox-swagger2-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/swagger/swagger-annotations/1.5.20/swagger-annotations-1.5.20.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/swagger/swagger-models/1.5.20/swagger-models-1.5.20.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-spi/2.9.2/springfox-spi-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-core/2.9.2/springfox-core-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/google/guava/guava/20.0/guava-20.0.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/plugin/spring-plugin-core/1.2.0.RELEASE/spring-plugin-core-1.2.0.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/springframework/plugin/spring-plugin-metadata/1.2.0.RELEASE/spring-plugin-metadata-1.2.0.RELEASE.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-schema/2.9.2/springfox-schema-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-swagger-common/2.9.2/springfox-swagger-common-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-spring-web/2.9.2/springfox-spring-web-2.9.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mapstruct/mapstruct/1.2.0.Final/mapstruct-1.2.0.Final.jar"/>
+  <classpathentry kind="var" path="M2_REPO/io/springfox/springfox-swagger-ui/2.9.2/springfox-swagger-ui-2.9.2.jar"/>
 </classpath>
