--- a/springboot-mvc-rest-demo/pom.xml
+++ b/springboot-mvc-rest-demo/pom.xml
@@ -18,7 +18,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <elastic.version>6.2.4</elastic.version>
+<!--         <elastic.version>6.2.4</elastic.version> -->
+         <elastic.version>5.6.16</elastic.version>
         <lucene.version>7.2.1</lucene.version>
         <test.container.version>1.7.2</test.container.version>
         <gson.version>2.8.2</gson.version>
@@ -103,21 +104,26 @@
             <artifactId>elasticsearch</artifactId>
             <version>${elastic.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>transport</artifactId>
-            <version>${elastic.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>${elastic.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.elasticsearch.plugin</groupId>
-            <artifactId>transport-netty4-client</artifactId>
-            <version>${elastic.version}</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.elasticsearch.client</groupId> -->
+<!--             <artifactId>transport</artifactId> -->
+<!--             <version>${elastic.version}</version> -->
+<!--         </dependency> -->
+ <dependency>
+    <groupId>org.elasticsearch.client</groupId>
+    <artifactId>elasticsearch-rest-client</artifactId>
+    <version>5.6.16</version>
+</dependency>
+<dependency>
+    <groupId>org.elasticsearch.client</groupId>
+    <artifactId>elasticsearch-rest-high-level-client</artifactId>
+    <version>5.6.16</version>
+</dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.elasticsearch.plugin</groupId> -->
+<!--             <artifactId>transport-netty4-client</artifactId> -->
+<!--             <version>${elastic.version}</version> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-test-framework</artifactId>
@@ -157,7 +163,33 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
-     		
+<!--  		<dependency> -->
+<!-- 			<groupId>org.apache.hive</groupId> -->
+<!-- 			<artifactId>hive-jdbc</artifactId> -->
+<!-- 			<version>2.1.1</version> -->
+<!-- 			<exclusions> -->
+<!-- 				<exclusion> -->
+<!-- 					<artifactId>slf4j-log4j12</artifactId> -->
+<!-- 					<groupId>org.slf4j</groupId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<artifactId>log4j</artifactId> -->
+<!-- 					<groupId>log4j</groupId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>javax.servlet</groupId> -->
+<!-- 					<artifactId>servlet-api</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 				<exclusion> -->
+<!-- 					<groupId>org.eclipse.jetty.aggregate</groupId> -->
+<!-- 					<artifactId>jetty-all</artifactId> -->
+<!-- 				</exclusion> -->
+<!-- 			</exclusions> -->
+<!-- 		</dependency> -->
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework</groupId> -->
+<!-- 			<artifactId>spring-jdbc</artifactId> -->
+<!-- 		</dependency> -->
 <dependency>
     <groupId>io.springfox</groupId>
     <artifactId>springfox-swagger2</artifactId>
@@ -167,10 +199,51 @@
     <groupId>io.springfox</groupId>
     <artifactId>springfox-swagger-ui</artifactId>
     <version>2.9.2</version>
-</dependency>		
-		
-		
-		
+</dependency>	
+       <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-bean-validators</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.1</version>
+        </dependency>
+<!-- 	<dependency> -->
+<!-- 		<groupId>org.apache.hadoop</groupId> -->
+<!-- 		<artifactId>hadoop-common</artifactId> -->
+<!-- 		<version>2.7.1</version> -->
+<!-- 		<exclusions> -->
+<!-- 			<exclusion> -->
+<!-- 				<artifactId>slf4j-log4j12</artifactId> -->
+<!-- 				<groupId>org.slf4j</groupId> -->
+<!-- 			</exclusion> -->
+<!-- 			<exclusion> -->
+<!-- 				<artifactId>log4j</artifactId> -->
+<!-- 				<groupId>log4j</groupId> -->
+<!-- 			</exclusion> -->
+<!-- 			<exclusion> -->
+<!-- 				<groupId>javax.servlet</groupId> -->
+<!-- 				<artifactId>servlet-api</artifactId> -->
+<!-- 			</exclusion> -->
+<!-- 			<exclusion> -->
+<!-- 				<groupId>org.mortbay.jetty</groupId> -->
+<!-- 				<artifactId>servlet-api-2.5</artifactId> -->
+<!-- 			</exclusion> -->
+<!-- 			<exclusion> -->
+<!-- 				<groupId>com.google.guava</groupId> -->
+<!-- 				<artifactId>guava</artifactId> -->
+<!-- 			</exclusion>			 -->
+
+<!-- 		</exclusions> -->
+<!-- 	</dependency> -->
+
+	<dependency>
+	    <groupId>commons-dbcp</groupId>
+	    <artifactId>commons-dbcp</artifactId>
+	    <version>1.4</version>
+	</dependency>    		
 	</dependencies>
 
 	<build>
