--- a/springboot-mvc-rest-demo/src/main/resources/application.yml
+++ b/springboot-mvc-rest-demo/src/main/resources/application.yml
@@ -19,4 +19,12 @@ app:
     size: 5
     timeout: 60 
 
-  
+  mourya:
+    hive:
+      connectionURL: jdbc:hive2://localhost:10000/default;principal=hive/localhost@ATHENA.MIT.EDU
+      username: mourya
+      password: password
+    kerberos:
+      keyTabLocation: ~/Security/mourya.keytab
+      krb5Location: ~/krb5.conf
+    priniciple: mourya@ATHENA.MIT.EDU
